plugins {
    id("java-library")
    id("maven-publish")
    // https://github.com/jpenilla/run-task
    id("xyz.jpenilla.run-paper") version "3.0.2"
    // https://github.com/eldoriarpg/plugin-yml
    id("de.eldoria.plugin-yml.paper") version "0.8.0"
    // https://github.com/PaperMC/paperweight
    id("io.papermc.paperweight.userdev") version "2.0.0-beta.19"
}

final String VERSION = "1.21.11"
final String RUN_NUMBER = System.getenv("GITHUB_RUN_NUMBER") ?: "DEV"

group = "cloud.grabsky"
version = "$VERSION+$RUN_NUMBER"

publishing {
    publications {
        register("maven", MavenPublication.class) {
            from components.java
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    // Repository for the Paper API.
    maven { url = "https://repo.papermc.io/repository/maven-public/" }
    // Repository for the WorldEdit and WorldGuard APIs.
    maven { url = "https://maven.enginehub.org/repo/" }
    // Repository for the PlaceholderAPI, API.
    maven { url = "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
    // Repository containing the 'PacketEvents' dependency.
    maven { url = "https://repo.codemc.io/repository/maven-releases" }
    // Repository containing 'BlueMap' dependency.
    maven { url = "https://repo.bluecolored.de/releases" }
    // Repository containing all my libraries.
    maven { url = "https://vela.grabsky.workers.dev/releases" }
}

dependencies {
    // https://github.com/projectlombok/lombok
    compileOnly("org.projectlombok:lombok:1.18.42")
    annotationProcessor("org.projectlombok:lombok:1.18.42")
    // https://github.com/PaperMC/Paper
    paperweight.paperDevBundle("1.21.11-R0.1-SNAPSHOT")
    // https://github.com/Grabsky/bedrock
    paperLibrary("cloud.grabsky:bedrock:1.21-67")
    // https://github.com/Grabsky/commands
    paperLibrary("cloud.grabsky:commands:1.20.1-40")
    // https://github.com/Grabsky/configuration
    paperLibrary("cloud.grabsky:configuration-paper:1.21.4-55")
    // https://github.com/EngineHub/WorldGuard
    compileOnly("com.sk89q.worldguard:worldguard-bukkit:7.0.9-SNAPSHOT")
    // https://github.com/Grabsky/Azure
    compileOnly("cloud.grabsky:azure-api:1.21.8-163") {
        exclude group: "cloud.grabsky", module: "bedrock"
    }
    // https://github.com/PlaceholderAPI/PlaceholderAPI
    compileOnly("me.clip:placeholderapi:2.11.7")
    // https://github.com/retrooper/packetevents
    compileOnly("com.github.retrooper:packetevents-spigot:2.11.2")
    // https://github.com/BlueMap-Minecraft/BlueMapAPI/
    compileOnly("de.bluecolored:bluemap-api:2.7.7")
}

tasks {
    runServer {
        minecraftVersion("1.21.11")
        jvmArgs("--enable-preview")
        downloadPlugins {
            modrinth("worldedit", "CkT32vix") // 7.4.0
            modrinth("worldguard", "WaElxvDz") // 7.0.15
            modrinth("placeholderapi", "2.11.7")
            modrinth("luckperms", "v5.5.17-bukkit")
            modrinth("packetevents", "2.11.2+spigot")
            github("Grabsky", "Azure", "1.21.8+163", "Azure-1.21.8-163.jar")
        }
    }
    compileJava {
        options.fork = true
        options.compilerArgs += "--enable-preview"
        // Setting compatibility to Java 21 (above should work too).
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }
}

paper {
    main = "cloud.grabsky.claims.Claims"
    loader = "cloud.grabsky.claims.Claims\$PluginLoader"
    generateLibrariesJson = true
    apiVersion = "1.21.11"
    serverDependencies {
        "PlaceholderAPI" { load = "BEFORE"; required = true }
        "packetevents"   { load = "BEFORE"; required = true }
        "WorldGuard"     { load = "BEFORE"; required = true }
        "Azure"          { load = "BEFORE"; required = true }
        "BlueMap"        { load = "BEFORE"; required = false }
    }
}

// Configuring runServer task to use JetBrains' JDK 21 for expanded hot-swap features.
tasks.withType(xyz.jpenilla.runtask.task.AbstractRun.class).configureEach {
    javaLauncher = javaToolchains.launcherFor {
        vendor = JvmVendorSpec.JETBRAINS
        languageVersion = JavaLanguageVersion.of(21)
    }
    jvmArgs("-Xmx1G", "-XX:+AllowEnhancedClassRedefinition", "-Dcom.mojang.eula.agree=true", "-Dnet.kyori.ansi.colorLevel=truecolor")
}

// Returns formatted release name. (for GitHub Actions)
tasks.register("getRelease", () -> print("$VERSION #$RUN_NUMBER"))

// Returns formatted tag name. (for GitHub Actions)
tasks.register("getTag", () -> print("$VERSION+$RUN_NUMBER"))

